--- a/EMART-UI/src/app/Seller/sellerlandingpage/sellerlandingpage.component.html
+++ b/EMART-UI/src/app/Seller/sellerlandingpage/sellerlandingpage.component.html
@@ -1,1 +1,50 @@
-<p>sellerlandingpage works!</p>
+<style>
+    
+    .div1{
+      overflow: hidden;
+      background-color: #e9e9e9;
+    }
+    
+    .div1 a {
+      float: left;
+      display: block;
+      color: black;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    
+    .div1 a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    
+    .div1  a.active {
+      background-color: #2196F3;
+      color: white;
+    }
+    </style>
+    <body>
+    <main>
+        <section>
+      
+            <div class="div1" style="background-color:goldenrod;">
+                <a  [routerLink]="'viewitems'" routerLinkActive="router-link-active" >View Items</a>
+                <a [routerLink]="'viewreports'" routerLinkActive="router-link-active">View Reports</a>
+                <a [routerLink]="'viewsellerprofile'" routerLinkActive="router-link-active">View Seller Profile</a>
+                <a (click)="logout()">LoGOUT</a>
+        </div>
+    
+             <div>
+                <router-outlet></router-outlet>
+             </div>
+          
+             
+        </section>
+    </main>   
+    
+    </body>
+    
+       
+      
