--- a/EMART-UI/src/app/Seller/sellerlandingpage/sellerlandingpage.component.html
+++ b/EMART-UI/src/app/Seller/sellerlandingpage/sellerlandingpage.component.html
@@ -34,6 +34,7 @@
                 <a [routerLink]="'viewreports'" routerLinkActive="router-link-active">View Reports</a>
                 <a [routerLink]="'viewsellerprofile'" routerLinkActive="router-link-active">View Seller Profile</a>
                 <a (click)="logout()">LoGOUT</a>
+                <img src="assets/images/2.jpg" style="width: 100%;height: 100px;">
         </div>
     
              <div>
