--- a/EMART-UI/src/app/Account/registerseller/registerseller.component.html
+++ b/EMART-UI/src/app/Account/registerseller/registerseller.component.html
@@ -1,3 +1,82 @@
-<p>registerseller works!</p>
 
-<router-outlet></router-outlet>
+<div class="card l-3">
+    <div class="card-body" >
+        <form [formGroup]="sellerregisterform" (ngSubmit)="onSubmit()"  >
+            <div class="form-group">
+                    <label>ID</label>
+                    <input type="text" formControlName="sid" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.sid.errors }">
+                       <div *ngIf="submitted && f.sid.errors" class="invalid-feedback">
+                        <div *ngIf="f.sid.errors.required">ID is required</div>
+                    </div>
+           </div>
+            <div class="form-group">
+                    <label>User Name</label>
+                    <input type="text" formControlName="sname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" />
+                    <div *ngIf="submitted && f.sname.errors" class="invalid-feedback">
+                        <div *ngIf="f.sname.errors.required">Name is required</div>
+                        <div *ngIf="f.sname.errors.pattern">Enter only Alphabets in upper case</div>
+                    </div>
+             </div>
+            <div class="form-group">
+                    <label>Company Name</label>
+                    <input type="text" formControlName="companyname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.companyname.errors }" />
+                    <div *ngIf="submitted && f.companyname.errors" class="invalid-feedback">
+                        <div *ngIf="f.companyname.errors.required">company name is required</div>
+                    </div>
+            </div>
+            <div class="form-group">
+                <label>Breif about Company</label>
+                <input type="text" formControlName="brief_about_company" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.brief_about_company.errors }" />
+                <div *ngIf="submitted && f.brief_about_company.errors" class="invalid-feedback">
+                    <div *ngIf="f.brief_about_company.errors.required">about company is required</div>
+                </div>
+        </div>
+        <div class="form-group">
+            <label>Postal Adress</label>
+            <input type="text" formControlName="postal_address" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.postal_address.errors }" />
+            <div *ngIf="submitted && f.postal_address.errors" class="invalid-feedback">
+                <div *ngIf="f.postal_address.errors.required">postal address is required</div>
+            </div>
+    </div>
+    <div class="form-group">
+        <label>GSTIN</label>
+        <input type="number" formControlName="GSTIN" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.GSTIN.errors }">
+           <div *ngIf="submitted && f.GSTIN.errors" class="invalid-feedback">
+            <div *ngIf="f.GSTIN.errors.required">GSTIN is required</div>
+        </div>
+</div>
+
+            
+          <div class="form-group">
+                <label>Mobile</label>
+                <input type="text" value="+91" readonly size="2"/><input type="number" formControlName="smobile" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.smobile.errors }" />
+                <div *ngIf="submitted && f.smobile.errors" class="invalid-feedback">
+                    <div *ngIf="f.smobile.errors.required">Mobile no is required</div>
+                    <div *ngIf="f.smobile.errors.pattern">Mobile no Must be Valid</div>
+                </div>
+            
+         </div>
+            <div class="form-group">
+                <label>Email</label>
+                <input type="text" formControlName="smail" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.smail.errors }" />
+                <div *ngIf="submitted && f.smail.errors" class="invalid-feedback">
+                    <div *ngIf="f.smail.errors.required">Email is required</div>
+                    <div *ngIf="f.smail.errors.semail">Email must be a valid email address</div>
+                </div>
+            </div>
+               <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                        <div *ngIf="f.password.errors.minlength">Password must be at least 8 characters</div>
+                    </div>
+                </div>
+            <div class="text-center">
+                <button class="btn btn-primary mr-1">Submit</button>
+          </div>
+        </form>
+    </div>
+</div>
+
+
