--- a/EMART-UI/src/app/Account/home/home.component.html
+++ b/EMART-UI/src/app/Account/home/home.component.html
@@ -1,3 +1,7 @@
+<div >
+  <h1><marquee style="color: cyan;font-style: italic;">Emart </marquee></h1>
+</div>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,7 +18,8 @@ section
   height:auto;
 }
 body {
-background-color:skyblue;
+background-image: url(assets/images/4545.jfif),width:100%,height: 100%;;
+
 
 
 }
@@ -98,7 +103,7 @@ background-color:skyblue;
 
 <div class="topnav" style="background-color: darkslategrey;">
   <a href="home.component.html"><img src="assets/images/45.png" height="30px"></a>
-  <a class="active" href="#home">Home</a>
+  <a class="active" [routerLink]="'login'" >Home</a>
   <a href="#">About</a>
   <a href="#contact">Contact</a>
   <div class="search-container">
@@ -108,6 +113,7 @@ background-color:skyblue;
     </form>
   
   </div>
+
     <a [routerLink]="'login'" routerLinkActive="router-link-active" >Login</a>&nbsp;
    
     
@@ -115,13 +121,20 @@ background-color:skyblue;
 </header>
 
 <body>
+  <div class="row">
+    
+    <div class="col">
+      
+      
+      </div>
+    </div>
   
     <main>
       <aside>
       
       
       </aside>
-        <section >
+        <section style="background-image:url('assets/images/300.webp');">
             <router-outlet> </router-outlet>
         </section>
     </main>
