--- a/EMART-UI/src/app/Account/registerseller/registerseller.component.html
+++ b/EMART-UI/src/app/Account/registerseller/registerseller.component.html
@@ -1,8 +1,13 @@
-
-<div class="card l-3">
+<style>
+    label{
+        color:white
+    }
+</style>
+<div class="container card col-md-4 " style="height: 300;background-color:transparent;">
     <div class="card-body" >
         <form [formGroup]="sellerregisterform" (ngSubmit)="onSubmit()"  >
             <div class="form-group">
+                <marquee style="color: cyan;background-color: darkorchid;">Seller Register</marquee>
                     <label>ID</label>
                     <input type="text" formControlName="sid" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.sid.errors }">
                        <div *ngIf="submitted && f.sid.errors" class="invalid-feedback">
