--- a/EMART-UI/src/app/Account/login/login.component.html
+++ b/EMART-UI/src/app/Account/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="container card col-md-4 " style="background-color: transparent;">
+<div class="container card col-md-4 " style="background-color:purple;">
 <div id="login-box">
 <div class="logo">
 
@@ -8,7 +8,7 @@
 <div class="controls">
 <input type="text" name="name"  [(ngModel)]="name" placeholder="Username" class="form-control" />&nbsp;&nbsp;
 <input type="password" name="pwd"   [(ngModel)]="pwd" placeholder="Password" class="form-control" />
-<button type="button" class="btn btn-default btn-block btn-custom" (click)="validate()" style="color: white;">Login</button><br>
+<button type="button" class="btn btn-default btn-block btn-custom" (click)="validate()" style="color: white;background-color: cyan;">Login</button><br>
 <a [routerLink]="'/home/registerbuyer'"  >Register New Buyer</a>&nbsp;&nbsp;<br>
 <a [routerLink]="'/home/registerseller'" >Register New Seller</a>          
 
