--- a/EMART-UI/src/app/Account/registerbuyer/registerbuyer.component.html
+++ b/EMART-UI/src/app/Account/registerbuyer/registerbuyer.component.html
@@ -3,7 +3,7 @@
         color:white
     }
 </style>
-<div class="container card col-md-4 " style="height: 300;background-color:transparent;">
+<div class="container card col-md-4 " style="height: 300;background-color:purple;">
     <div class="card-body">
         <form [formGroup]="buyerregisterform" (ngSubmit)="onSubmit()" >
             <div class="form-group ">
