--- a/EMART-UI/src/app/Buyer/buyerslandingpage/buyerslandingpage.component.html
+++ b/EMART-UI/src/app/Buyer/buyerslandingpage/buyerslandingpage.component.html
@@ -14,6 +14,10 @@
   text-decoration: none;
   font-size: 17px;
 }
+#s{
+  background-image: url("assets/images/sp.jpg");
+  background-size:cover;
+}
 
 .div1 a:hover {
   background-color: #ddd;
@@ -25,7 +29,7 @@
   color: white;
 }
 </style>
-<body style="background-image: url('assets/images/1.jpg');">
+<body id="s">
 <main>
     <section >
   
