--- a/EMART-UI/src/app/Seller/sellerlandingpage/sellerlandingpage.component.html
+++ b/EMART-UI/src/app/Seller/sellerlandingpage/sellerlandingpage.component.html
@@ -4,6 +4,10 @@
       overflow: hidden;
       background-color: #e9e9e9;
     }
+    #s{
+  background-image: url("assets/images/sp.jpg");
+  background-size:cover;
+}
     
     .div1 a {
       float: left;
@@ -25,7 +29,7 @@
       color: white;
     }
     </style>
-    <body>
+    <body id="s">
     <main>
         <section>
       
@@ -33,22 +37,11 @@
               <a  [routerLink]="'additems'" routerLinkActive="router-link-active" >ADD Items</a>
                 <a  [routerLink]="'viewitems'" routerLinkActive="router-link-active" >View Items</a>
                 <a [routerLink]="'viewreports'" routerLinkActive="router-link-active">View Reports</a>
-                <a [routerLink]="'viewsellerprofile'" routerLinkActive="router-link-active">View Seller Profile</a>
+                <a [routerLink]="'editprofile'" routerLinkActive="router-link-active">View Profile</a>
                 <a (click)="logout()">LoGOUT</a>
                
                
         </div>
-        <div class="row" style="background-color: cyan;">
-          <div class="col">
-            <img src="assets/images/2.jpg" style="height: 250px;">
-          </div>
-          <div class="col">
-            <img src="assets/images/3.jpg" style="height: 250px;">
-          </div>
-          <div class="col">
-            <img src="assets/images/4.jpg" style="height: 250px;">
-          </div>
-    </div>
     
              <div>
                 <router-outlet></router-outlet>
