--- a/EMART-UI/src/app/Account/home/home.component.html
+++ b/EMART-UI/src/app/Account/home/home.component.html
@@ -1,5 +1,5 @@
-<div >
-  <h1><marquee style="color: cyan;font-style: italic;">Emart </marquee></h1>
+<div style="height:50px;background-color: black;">
+  <h1><marquee style="color: white;font-style: italic;" >Emart </marquee></h1>
 </div>
 
 <!DOCTYPE html>
@@ -17,12 +17,7 @@ section
 {
   height:auto;
 }
-body {
-background-image: url(assets/images/4545.jfif),width:100%,height: 100%;;
 
-
-
-}
 
 .topnav {
   overflow: hidden;
@@ -55,6 +50,11 @@ background-image: url(assets/images/4545.jfif),width:100%,height: 100%;;
   margin-top: 8px;
   font-size: 17px;
   border: none;
+
+}
+#s{
+  background-image: url("assets/images/sp.jpg");
+  background-size:cover;
 }
 
 .topnav .search-container button {
@@ -67,6 +67,9 @@ background-image: url(assets/images/4545.jfif),width:100%,height: 100%;;
   border: none;
   cursor: pointer;
 }
+h1,p{
+  color:white;
+}
 
 .topnav .search-container button:hover {
   background: #ccc;
@@ -76,6 +79,7 @@ background-image: url(assets/images/4545.jfif),width:100%,height: 100%;;
   .topnav .search-container {
     float: none;
   }
+
   .topnav a, .topnav input[type=text], .topnav .search-container button {
     float: none;
     display: block;
@@ -97,13 +101,14 @@ background-image: url(assets/images/4545.jfif),width:100%,height: 100%;;
 
       
 }
+}
 </style>
 </head>
 <header>
 
 <div class="topnav" style="background-color: darkslategrey;">
-  <a href="home.component.html"><img src="assets/images/45.png" height="30px"></a>
-  <a class="active" [routerLink]="'login'" >Home</a>
+  <a [routerLink]="'login'"><img src="assets/images/45.png" height="30px"></a>
+  <a  [routerLink]="'login'" >Home</a>
   <a href="#">About</a>
   <a href="#contact">Contact</a>
   <div class="search-container">
@@ -120,28 +125,28 @@ background-image: url(assets/images/4545.jfif),width:100%,height: 100%;;
 </div>
 </header>
 
-<body>
-  <div class="row">
+<body id="s">
+  <div class="row" >
     
-    <div class="col">
-      
-      
+    <div class="col" >
+     <h1>
+       Welcome  To Emart
+     </h1>
+      <p>
+
+      </p>
+
       </div>
+      <div class="col">
+        <router-outlet> </router-outlet>
+      
+    </div>
     </div>
   
-    <main>
-      <aside>
-      
-      
-      </aside>
-        <section style="background-image:url('assets/images/300.webp');">
-            <router-outlet> </router-outlet>
-        </section>
-    </main>
-
+   
     <div>
       <footer  style="background-color: darkslategray;text-align: center">
-       <p> @copy All Rights Reserved 2017</p>
+       <p> &copy All Rights Reserved 2017</p>
     </footer>
 
     </div>
