--- a/EMART-UI/src/app/Seller/editprofile/editprofile.component.html
+++ b/EMART-UI/src/app/Seller/editprofile/editprofile.component.html
@@ -1,13 +1,14 @@
+
 <style>
     label{
         color:white
     }
 </style>
-<div class="container card col-md-4 " style="height: 300;background-color:purple;">
+<div class="container card col-md-4 " style="height: 300;background-color:transparent;">
     <div class="card-body" >
         <form [formGroup]="sellerregisterform" (ngSubmit)="onSubmit()"  >
             <div class="form-group">
-                <marquee style="color: cyan;background-color: darkorchid;">Seller Register</marquee>
+                <marquee style="color: cyan;background-color: darkorchid;">Edit Profile</marquee>
                     <label>ID</label>
                     <input type="text" formControlName="sid" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.sid.errors }">
                        <div *ngIf="submitted && f.sid.errors" class="invalid-feedback">
