--- a/EMART-UI/src/app/Account/home/home.component.html
+++ b/EMART-UI/src/app/Account/home/home.component.html
@@ -52,14 +52,14 @@ section
   border: none;
 
 }
-#s{
-  background-image: url("assets/images/sp.jpg");
+#s,#h{
+  background-image: url("assets/images/sky.jpg");
   background-size:cover;
 
 
 }
 #bg{
-  background-color: white;
+  background-color:transparent;
 }
 
 .topnav .search-container button {
@@ -109,7 +109,7 @@ h1,p{
 }
 </style>
 </head>
-<header>
+<header id="h">
 
 <div class="topnav" style="background-color:gold">
   <a [routerLink]="'login'"><img src="assets/images/ns.jpg" height="20px"></a>
