--- a/EMART-UI/src/app/Account/registerbuyer/registerbuyer.component.html
+++ b/EMART-UI/src/app/Account/registerbuyer/registerbuyer.component.html
@@ -3,7 +3,7 @@
         color:gold
     }
 </style>
-<div class="container card col-md-5 " style="height: 300;background-color:black;">
+<div class="container card col-md-5 " style="height: 300;background-color:transparent;">
     <div class="card-body">
         <form [formGroup]="buyerregisterform" (ngSubmit)="onSubmit()" >
             <div class="form-group ">
@@ -24,15 +24,15 @@
              </div>
             <div class="form-group ">
                     <label>Created DateTime</label>
-                    <input type="date" formControlName="createddatetime" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.createddatetime.errors }" />
-                    <div *ngIf="submitted && f.createddatetime.errors" class="invalid-feedback">
-                        <div *ngIf="f.createddatetime.errors.required">Join date is required</div>
+                    <input type="date" formControlName="createddate" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.createddate.errors }" />
+                    <div *ngIf="submitted && f.createddate.errors" class="invalid-feedback">
+                        <div *ngIf="f.createddate.errors.required">Join date is required</div>
                     </div>
             </div>
             
           <div class="form-group ">
                 <label>Mobile</label>
-                <input type="text" value="+91" readonly size="2"/><input type="number" formControlName="bmobile" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.bmobile.errors }" />
+                <input type="text" value="+91" readonly size="2"/><input type="text" formControlName="bmobile" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.bmobile.errors }" />
                 <div *ngIf="submitted && f.bmobile.errors" class="invalid-feedback">
                     <div *ngIf="f.bmobile.errors.required">Mobile no is required</div>
                     <div *ngIf="f.bmobile.errors.pattern">Mobile no Must be Valid</div>
