--- a/EMART-UI/src/app/Account/login/login.component.html
+++ b/EMART-UI/src/app/Account/login/login.component.html
@@ -9,7 +9,7 @@
 <input type="text" name="name"  [(ngModel)]="name" placeholder="Username" class="form-control" />&nbsp;&nbsp;
 <input type="password" name="pwd"   [(ngModel)]="pwd" placeholder="Password" class="form-control" />&nbsp;&nbsp;
 <button type="button" class="btn btn-default btn-block btn-custom" (click)="validate()" style="background-color:cyan;">Login</button><br>
-<a [routerLink]="'/home/registerbuyer'"  style="color:gold;">Register New Buyer ?</a>&nbsp;&nbsp;<br>
+<a [routerLink]="'/home/registerbuyer'"   onfocus="p" style="color:gold;">Register New Buyer ?</a>&nbsp;&nbsp;<br>
 <a [routerLink]="'/home/registerseller'" style="color:gold;">Register New Seller ?</a>          
 
 </div>
