--- a/EMART-UI/src/app/Seller/editprofile/editprofile.component.html
+++ b/EMART-UI/src/app/Seller/editprofile/editprofile.component.html
@@ -4,7 +4,7 @@
         color:white
     }
 </style>
-<div class="container card col-md-4 " style="height: 300;background-color:transparent;">
+<div class="container card col-md-4" style="height: 300;background-color:transparent;">
     <div class="card-body" >
         <form [formGroup]="sellerregisterform" (ngSubmit)="onSubmit()"  >
             <div class="form-group">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             <div class="text-center">
-                <button class="btn btn-primary mr-1">Submit</button>
+                <button class="btn btn-primary mr-1">Edit Profile</button>
           </div>
         </form>
     </div>
