--- a/EMART-UI/src/app/Seller/additems/additems.component.html
+++ b/EMART-UI/src/app/Seller/additems/additems.component.html
@@ -5,9 +5,9 @@
   
    
 </style>
-<div class="container card col-md-3 "  id="u" style="height: 300;background-color:transparent;">
+<div class="container card col-md-3"  id="u" style="height: 300;background-color:transparent;">
     <div class="card-body" >
-        <form [formGroup]="additemform" (ngSubmit)="onSubmit()"  >
+        <form [formGroup]="additemform"   >
             <div class="form-group">
                 <marquee style="color: cyan;background-color: darkorchid;">Adding Items</marquee>
                     <label>Iteam ID</label>
@@ -18,25 +18,40 @@
            </div>
             <div class="form-group">
                     <label>category ID</label>
-                    <input type="number" formControlName="category_id" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.category_id.errors }" />
-                    <div *ngIf="submitted && f.category_id.errors" class="invalid-feedback">
-                        <div *ngIf="f.category_id.errors.required">Id is required</div>
+                    <input type="number" formControlName="categoryid" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.categoryid.errors }" />
+                    <div *ngIf="submitted && f.categoryid.errors" class="invalid-feedback">
+                        <div *ngIf="f.categoryid.errors.required">Id is required</div>
                      
                     </div>
              </div>
             <div class="form-group">
                     <label>subcategory ID</label>
-                    <input type="number" formControlName="subcategory_id" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.subcategory_id.errors }" />
-                    <div *ngIf="submitted && f.subcategory_id.errors" class="invalid-feedback">
-                        <div *ngIf="f.subcategory_id.errors.required">Id is required</div>
+                    <input type="number" formControlName="subcategoryid" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.subcategoryid.errors }" />
+                    <div *ngIf="submitted && f.subcategoryid.errors" class="invalid-feedback">
+                        <div *ngIf="f.subcategoryid.errors.required">Id is required</div>
                     </div>
             </div>
             <div class="form-group">
-                <label>Item Name</label>
-                <input type="text" formControlName="item_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.item_name.errors }" />
-                <div *ngIf="submitted && f.item_name.errors" class="invalid-feedback">
-                    <div *ngIf="f.item_name.errors.required">Item Name is required</div>
+                <label>seller ID</label>
+                <input type="number" formControlName="sid" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.sid.errors }" />
+                <div *ngIf="submitted && f.sid.errors" class="invalid-feedback">
+                    <div *ngIf="f.sid.errors.required">Id is required</div>
                 </div>
+        </div>
+            <div class="form-group">
+                <label>Item Name</label>
+                <input type="text" formControlName="itemname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.itemname.errors }" />
+                <div *ngIf="submitted && f.itemname.errors" class="invalid-feedback">
+                    <div *ngIf="f.itemname.errors.required">Item Name is required</div>
+                </div>
+        </div>
+        <div class="form-group">
+            <label>Iteam Price </label>
+            <input type="number" formControlName="price" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.price.errors }" />
+            <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
+                <div *ngIf="f.price.errors.required">price  is required</div>
+             
+            </div>
         </div>
         <div class="form-group">
             <label>Description</label>
@@ -47,11 +62,12 @@
     </div>
     <div class="form-group">
         <label>Stock Number</label>
-        <input type="number" formControlName="stock_number" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.stock_number.errors }" />
-        <div *ngIf="submitted && f.stock_number.errors" class="invalid-feedback">
-            <div *ngIf="f.stock_number.errors.required">Id is required</div>
+        <input type="number" formControlName="stocknumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.stocknumber.errors }" />
+        <div *ngIf="submitted && f.stocknumber.errors" class="invalid-feedback">
+            <div *ngIf="f.stocknumber.errors.required">Id is required</div>
          
         </div>
+
  </div>
     <div class="form-group">
         <label>Remarks</label>
@@ -64,7 +80,11 @@
           
                
             <div class="text-center">
-                <button class="btn btn-primary mr-1">Submit</button>
+                <button class="btn btn-primary mr-1" (click)="Add()">Add Item</button>&nbsp;
+                <button class="btn btn-primary mr-1" (click)="Delete()">Delete Item</button>&nbsp;<br><br>
+                <button class="btn btn-primary mr-1" (click)="update()">update Item</button>&nbsp;&nbsp;
+                
+                
           </div>
         </form>
     </div>
