--- a/EMART-UI/src/app/Seller/viewitems/viewitems.component.html
+++ b/EMART-UI/src/app/Seller/viewitems/viewitems.component.html
@@ -1,146 +1,35 @@
 
-<!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-}
-
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  width: 100%;
-  left: 0;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content .header {
-  background: red;
-  padding: 16px;
-  color: white;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  background-color: #ccc;
-  height: 250px;
-}
-
-.column a {
-  float: none;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.column a:hover {
-  background-color: #ddd;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    height: auto;
-  }
-}
-</style>
-</head>
-<body>
-
-<div class="navbar">
-  <a href="home">Home</a>
-  <div class="dropdown">
-    <button class="dropbtn">Dropdown 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <div class="header">
-        <h2>Mega Menu</h2>
-      </div>   
-      <div class="row">
-        <div class="column">
-          <h3>Category 1</h3>
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-        <div class="column">
-          <h3>Category 2</h3>
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-        <div class="column">
-          <h3>Category 3</h3>
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
+  <div class="card m-1" style="width:100%;align-items: center;">
+    <div class="container">
+        <table class="table table-bordered">
+            <tr>
+                <th>Item Id</th>
+                <th>Category Id</th>
+                <th>SubCatergory Id</th>
+                <th>Price</th>
+                <th>ItemName</th>
+                <th>Description</th>
+                <th>Stockno</th>
+                <th>Remarks</th>
+                <th>Seller Id</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+            <tr *ngFor="let item of list">
+               <td>{{item.iid}}</td>
+               <td>{{item.categoryId}}</td>
+               <td>{{item.subcategoryId}}</td>
+               <td>{{item.price}}</td>
+               <td>{{item.itemName}}</td>
+               <td>{{item.description}}</td>
+               <td>{{item.stockNumber}}</td>
+               <td>{{item.remarks}}</td>
+               <td>{{item.sid}}</td>
+               <td><button class="btn btn-primary mr-1" type="button" (click)="Update()">Edit</button></td>
+               <td><button class="btn btn-primary mr-1" type="button" (click)="Delete()">Delete</button></td>
+            </tr>
+        </table>
     </div>
-  </div> 
-</div>
-
-
-</body>
-</html>
+    </div>
+    Thanks a lot.Got it, thanks!Received, thank you.
+    
