--- a/EMART-UI/src/app/Seller/additems/additems.component.html
+++ b/EMART-UI/src/app/Seller/additems/additems.component.html
@@ -47,6 +47,13 @@
             </div>
     </div>
     <div class="form-group">
+        <label>Upload image </label>
+        <input type="file" (change)="fileEvent($event)" formControlName="imagepath" class="form-control"  />
+       
+
+ </div>
+
+    <div class="form-group">
         <label>Stock Number</label>
         <input type="number" formControlName="stocknumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.stocknumber.errors }" />
         <div *ngIf="submitted && f.stocknumber.errors" class="invalid-feedback">
