--- a/EMART-UI/src/app/Buyer/search/search.component.html
+++ b/EMART-UI/src/app/Buyer/search/search.component.html
@@ -45,7 +45,7 @@ tr,td{
          Price: {{item.price}}<br>
           Name: {{item.itemName}}<br>
           Stock : {{item.stockNumber}}<br>
-          <button id="bt1" (click)="buy()" >Buy</button><br><br>
+          <button id="bt1" (click)="buy(item)" >Buy</button><br><br>
           <button id="bt2">Add To Cart</button></td>
         </tr>
     </table>
