--- a/EMART-UI/src/app/Buyer/buyproduct/buyproduct.component.html
+++ b/EMART-UI/src/app/Buyer/buyproduct/buyproduct.component.html
@@ -1,2 +1,89 @@
-<p>buyproduct works!</p>
-<h1>Nagasatish</h1>
+
+
+  
+        <style>
+            label{
+                color:gold;
+            }
+        </style>
+           <div class="row">
+                 <div class="col" style="width:35%;">
+          
+                        <div class="card card col-md-4" style="background-color: black;">
+        
+                           
+                                <form [formGroup]="buyproductform" >    
+                                    <div class="form-group">
+                                        <label>Item Name</label>
+                                        <input type="text" formControlName="itemName" class="form-control" readonly/>
+                                      </div>
+                                      <div class="form-group">
+                                        <label>Number Of Items</label>
+                                        <input type="text" formControlName="numberOfItems" class="form-control" autofocus/>
+                                      </div>
+                                      <div class="form-group">
+                                        <label>Date</label>
+                                        <input type="date" formControlName="dateTime" class="form-control"/>
+                                      </div>
+                                    <div class="form-group">
+                                        <label>Choose PayMent Mode</label>
+                                        <select formControlName="transactionType">
+                                            <option value="credit">Credit Card</option>
+                                            <option value="debit">Debit Card</option>
+                                            <option value="cod">Cash On Delivery</option>
+                                        </select>
+                                      </div>
+                                      <div class="form-group">
+                                        <label>Card Number</label>
+                                        <input type="text" formControlName="cardNumber" class="form-control"/>
+                                      </div>
+                                      <div class="form-group">
+                                        <label>CVV</label>
+                                        <input type="number" formControlName="CVV" class="form-control" style="width: 30%;"/>
+                                      </div>
+                                      <div class="form-group">
+                                        <label>ExpiryDate</label>
+                                        <input type="date" formControlName="ed" class="form-control"/>
+                                      </div>
+                                      <div class="form-group">
+                                        <label>Card Holders Name</label>
+                                        <input type="text" formControlName="name" class="form-control"/>
+                                      </div>
+                                    <hr class="my-4 bg-success"/>
+                                    <div class="form-group">
+                                        <div class="text-center">
+                                            <button type="submit" class="btn btn-primary mr-1" (click)=" purchase()">Purchase</button>
+                                        </div>
+                                    </div>
+                                </form>
+        
+                         </div>
+                <div>
+                <div class="col" style="width:60% ;">
+                    <div class="row">
+     
+                        <div class="col-md-2" *ngFor="let i of list1">
+                            <div class="card " style="width:350px;">
+                             
+                              <div class="card-body"  > 
+                               <td> <img class="card-img-top" src="/assets/images/{{i.imagepath}}" alt="Card image cap"></td>
+                               <td> ItemId:{{i.iid}}</td><br>
+                                <td>ItemName:{{i.itemName}}</td><br>
+                               <td> Description:{{i.description}}</td><br>
+                               <td>price:{{i.price}}</td><br>
+                               <td>Stock:{{i.stockNumber}}</td><br>
+                                <td>Remarks:{{i.remarks}}</td>
+                              </div>
+                              
+                              <div class="text-center">
+                                <button class="btn btn-primary mr-1">Add</button>
+                                <button class="btn btn-primary" (click)="BuyNow(i)">Buy</button>
+                            </div>
+                            </div>
+                            <br>
+                           </div>
+                            </div>
+                          </div>
+
+                 </div>
+           </div>  
