--- a/EMART-UI/src/app/Seller/editprofile/editprofile.component.html
+++ b/EMART-UI/src/app/Seller/editprofile/editprofile.component.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <button class="btn btn-primary mr-1">Edit Profile</button>
+                <button class="btn btn-primary mr-1">Update Profile</button>
           </div>
         </form>
     </div>
