--- a/EMART-UI/src/app/Seller/additems/additems.component.html
+++ b/EMART-UI/src/app/Seller/additems/additems.component.html
@@ -73,7 +73,7 @@
           
                
             <div class="text-center">
-                <button class="btn btn-primary mr-1" (click)="Add()">Add  New Item</button>&nbsp;
+                <button class="btn btn-primary mr-1" (click)="Add()">Add Item</button>&nbsp;
                
                 
           </div>
