--- a/EMART-UI/src/app/Account/home/home.component.html
+++ b/EMART-UI/src/app/Account/home/home.component.html
@@ -151,13 +151,13 @@ h1,p{
         </tr>&nbsp;
         <tr>
           <td style="height:30%;  width:30%;" align="center">
-          <img style="display:block;"   width="150px" height="150px" src="~/assets/images/a.webp" />
+          <img style="display:block;"   width="150px" height="150px" src="assets/images/a.webp" />
           </td>
           <td style="height:20%; width:20%;" align="center">
-          <img style="display:block;"  width="150px" height="150px" src="~/assets/images/d.jfif" />
+          <img style="display:block;"  width="150px" height="150px" src="assets/images/d.jfif" />
           </td>
           <td style="height:20%; width:20%;" align="center">
-          <img style="display:block;" width="150px" height="150px" src="~/assets/images/c.jfif" />
+          <img style="display:block;" width="150px" height="150px" src="assets/images/c.jfif" />
           </td>
           </tr>
         </table>
