--- a/EMART-UI/src/app/Account/login/login.component.html
+++ b/EMART-UI/src/app/Account/login/login.component.html
@@ -3,7 +3,7 @@
         color: white;
     }
 </style>
-<div class="container card col-md-4 " style="background-color:black;height:400px;">
+<div class="container card col-md-5 " style="background-color:black;height:400px;float: left;">
 <div id="login-box">
 <div class="logo">
 
