--- a/EMART-UI/src/app/Buyer/buyerslandingpage/buyerslandingpage.component.html
+++ b/EMART-UI/src/app/Buyer/buyerslandingpage/buyerslandingpage.component.html
@@ -38,7 +38,7 @@
             <a  [routerLink]="'buyproduct'" routerLinkActive="router-link-active" >Buy Product</a>
             <a [routerLink]="'purchasehistory'" routerLinkActive="router-link-active">Purchase History</a>
             <a  [routerLink]="'search'" routerLinkActive="router-link-active">Search Item</a>
-            <a [routerLink]="'viewcart'" routerLinkActive="router-link-active">ViewCart</a>
+            <a [routerLink]="'viewcart'" routerLinkActive="router-link-active">ViewCart({{this.count}})</a>
             <a [routerLink]="'buyereditprofile'" routerLinkActive="router-link-active">View Profile</a>
             
             <a (click)="logout()">Logout</a>
