--- a/EMART-UI/src/app/Account/home/home.component.html
+++ b/EMART-UI/src/app/Account/home/home.component.html
@@ -115,7 +115,7 @@ h1,p{
   <a [routerLink]="'login'"><img src="assets/images/ns.jpg" height="20px"></a>
   <a  [routerLink]="'login'" >Home</a>
   <a [routerLink]="'login'">About</a>
-  <a [routerLink]="'login'">Contact</a>
+  <a [routerLink]="'contact-us'">Contact</a>
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search.." name="search">
