--- a/EMART-UI/src/app/Admin/view-category/view-category.component.html
+++ b/EMART-UI/src/app/Admin/view-category/view-category.component.html
@@ -21,9 +21,55 @@ color:white;
                <td>{{item.categoryId}}</td>
                <td>{{item.categoryName}}</td>
                <td>{{item.briefDetails}}</td>
-               <td><button class="btn btn-primary mr-1" type="button" >Edit</button></td>
+               <td><button class="btn btn-info btn-lg" type="button" data-toggle="modal" data-target="#myModal" (click)="viewprofile(item.categoryId)">Edit</button></td>
                <td><button class="btn btn-danger" type="button" (click)="Delete(item.categoryId)">Delete</button></td>
             </tr>
         </table>
-    </div>
-    </div>
+        <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+          
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                  <form [formGroup]="itemform"  style="margin-top:2%;">
+                    <div class="offset-3">
+                        <div class="form-group col-8">
+                          <label>Category Id</label>
+                            <input type="number" formControlName="categoryId" class="form-control" />
+                        <!-- <div *ngIf="submitted && f.cid.errors" class="invalid-feedback">
+                            <div *ngIf="f.cid.errors.required">Brief Details is required</div>
+                        </div> -->
+                    
+                    </div>
+                    <div class="form-group col-8">
+                        <label>Category Name</label>
+                        <input type="text" formControlName="categoryName" class="form-control"  />
+                        <!-- <div *ngIf="submitted && f.cname.errors" class="invalid-feedback">
+                            <div *ngIf="f.cname.errors.required">Brief Details is required</div>
+                        </div> -->
+                
+                </div>
+                    <div class="form-group col-8">
+                        <label>Brief Details</label>
+                        <input type="text" formControlName="briefDetails" class="form-control"  />
+                        <!-- <div *ngIf="submitted && f.brief_details.errors" class="invalid-feedback">
+                            <div *ngIf="f.brief_details.errors.required">Brief Details is required</div>
+                        </div> -->
+                
+                </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="Edit()">Update</button>
+                </div>
+              </form>
+              </div>
+          
+            </div>
+          </div>
+    
+        </div>
+    
