--- a/EMART-UI/src/app/Seller/viewitems/viewitems.component.html
+++ b/EMART-UI/src/app/Seller/viewitems/viewitems.component.html
@@ -52,7 +52,7 @@
                
                 <div class="form-group">
                     <label>Item Name</label>
-                    <input type="text" formControlName="itemname" class="form-control"  />
+                    <input type="text" formControlName="itemname"  autofocus class="form-control"  />
                    
             </div>
             <div class="form-group">
